codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__handoff_deferred_discard_quit.snap
---
source: tui/src/chatwidget/tests/plan_handoff_deferred.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Discard the deferred handoff plan?
  Running /quit will discard the plan waiting for your next prompt.


› 1. Keep the handoff plan       Return to the current thread.
  2. Discard plan and run /quit  Continue with the selected command.

  enter select · esc back
