codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__handoff_deferred_starting_footer.snap
---
source: tui/src/chatwidget/tests/plan_handoff_deferred.rs
assertion_line: 69
expression: "render_bottom_popup(&chat, 80)"
---
› Ask Codex to do anything

  Handoff starting awaiting fresh thread
