codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__handoff_planning_footer.snap
---
source: tui/src/chatwidget/tests/plan_handoff_commands.rs
expression: "render_bottom_popup(&chat, 80)"
---
› Ask Codex to do anything

  GPT-5.6-Sol medium · /tmp/project          Handoff mode (shift+tab to cycle)
